--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <div class="box picture"></div>
+        <div class="box picture"><p class="header">Black Pearl</p></div>
     </div>
 </body>
 
