--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <div class="container">
-        <div class="box picture"><p class="header">Black Pearl</p></div>
+        <div class="box picture">
+            <p class="header">Black Pearl</p>
+            <button type="submit" class="btn">Find pirates</button>
+        </div>
     </div>
 </body>
 
