--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 </head>
 
 <body>
-    <div class="container">
+    <section class="container">
         <div class="box picture">
             <p class="header">Black Pearl</p>
             <button type="submit" class="btn">Find pirates</button>
         </div>
+
+    </section>
+<section class="sprite">
+    <div class="mdias">
+        <div class="media icon1"></div>
+        <div class="media icon2"></div>
+        <div class="media icon3"></div>
     </div>
+</section>
+
 </body>
 
 </html>
