--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <section class="container">
         <div class="box picture">
-            <p class="header">Black Pearl</p>
-            <button type="submit" class="btn">Find pirates</button>
+            <div><p class="header">Black Pearl</p></div>
+            
+            <div><button type="submit" class="btn">Find pirates</button></div>
         </div>
 
     </section>
