--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 </head>
 
 <body>
+   
     <section class="container">
+        <header class="decorated-element">Welcome to the club body</header>
         <div class="box picture">
             <div><p class="header">Black Pearl</p></div>
-            
             <div><button type="submit" class="btn">Find pirates</button></div>
         </div>
-
+        <div class="mdias">
+            <div class="media icon1"></div>
+            <div class="media icon2"></div>
+            <div class="media icon3"></div>
+        </div>
     </section>
-<section class="sprite">
-    <div class="mdias">
-        <div class="media icon1"></div>
-        <div class="media icon2"></div>
-        <div class="media icon3"></div>
-    </div>
-</section>
 
 </body>
 
