--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
-   
     <section class="container">
-        <header class="decorated-element">Welcome to the club body</header>
+        <header class="decorated-element">Welcome to the club body
+            <div class="message-box">
+                <img src="./images/mess.png" alt="message box">
+                <span class="message-text">You haven't exposed any pirates</span>
+            </div>
+        </header>
         <div class="box picture">
-            <div><p class="header">Black Pearl</p></div>
+            <div><p class="header">Black Pearl</p>
+        </div>
             <div><button type="submit" class="btn">Find pirates</button></div>
         </div>
         <div class="mdias">
