--- a/media.html
+++ b/media.html
@@ -9,25 +9,26 @@
 </head>
 
 <body>
-    <section class="container">
-        <header class="decorated-element">Welcome to the club body
-            <div class="message-box">
-                <img src="./images/mess.png" alt="message box">
+
+    <header class="header">Welcome aboard</header>
+    <main>
+    <section class="blpearl">
+        <div class="container-zero">
+            <div class="mess-box"> <img src="./images/mess.png" alt="message box">
                 <span class="message-text">You haven't exposed any pirates</span>
             </div>
-        </header>
-        <div class="box picture">
-            <div><p class="header">Black Pearl</p>
+
+            <button type="submit" class="btn">Find all pirates</button>
         </div>
-            <div><button type="submit" class="btn">Find pirates</button></div>
-        </div>
+    </section>
+    <section class="social-m">
         <div class="mdias">
             <div class="media icon1"></div>
             <div class="media icon2"></div>
             <div class="media icon3"></div>
         </div>
     </section>
-
+</main>
 </body>
 
 </html>
